# jimp2C

./: CMakeLists.txt  Przyklad.txt  README.md  backward.c  backward.h  checkData.c  checkData.h  forward.c  forward.h  main.c  printData.c  printData.h  readData.c  readData.h  test.txt  test2.txt  test3.txt
